--- a/core/static/css/app.css
+++ b/core/static/css/app.css
@@ -1,7 +1,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f8f9fa;
+  background-color: #318be5;
   margin: 0;
   padding: 0;
 }
