--- a/core/templates/core/view_note.html
+++ b/core/templates/core/view_note.html
@@ -1,3 +1,11 @@
+<input type="text" id="search-box" placeholder="Search notes..." />
+<ul>
+{% for note in notes %}
+  <li class="note-item"><b>{{ note.title }}</b> - {{ note.content }}</li>
+{% endfor %}
+</ul>
+<script src="{% static 'js/search.js' %}" defer></script>
+
 {% extends 'core/base.html' %}
 {% block content %}
 <h2>All Notes</h2>
