--- a/core/templates/core/add_note.html
+++ b/core/templates/core/add_note.html
@@ -1,9 +1,10 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <h2>Add a New Note</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
+<form id="add-note-form" method="post">{% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Save</button>
 </form>
+<script src="{% static 'js/add_note.js' %}" defer></script>
+
 {% endblock %}
