--- a/core/templates/core/add_note.html
+++ b/core/templates/core/add_note.html
@@ -1,10 +1,24 @@
 {% extends 'core/base.html' %}
+{% load static %}
+
 {% block content %}
 <h2>Add a New Note</h2>
-<form id="add-note-form" method="post">{% csrf_token %}
+
+<form id="add-note-form" method="post">
+  {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Save</button>
 </form>
+
+<script>
+  const noteApiUrl = "{% url 'api_notes' %}";
+</script>
 <script src="{% static 'js/add_note.js' %}" defer></script>
 
+
 {% endblock %}
+
+
+
+
+
