(fix) fix(js-template): guard inline template vars for anon users

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,8 +19,9 @@
     <hr>
     {% block content %}{% endblock %}
     <script>
-        const userId = {{ user.id }};
+        const isAuthenticated = {% if user.is_authenticated %}true{% else %}false{% endif %};
     </script>
+
 
 </body>
 </html>
